--- a/i-shop/courses-list.html
+++ b/i-shop/courses-list.html
@@ -67,7 +67,7 @@
 								<a href="page-login.html">Авторизация</a>
 							</li>
 							<li>
-								<a href="#">Обратная связь</a>
+								<a href="#">Корзина</a>
 							</li>
 						</ul>
 					</nav>
@@ -164,10 +164,16 @@
 									</div>
 								</div>
 								<br>
-								<!-- View btn -->
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
-							<!--/ product -->
 							<!-- product -->
 							<li class="category-item list product">
 								<div class="picture">
@@ -220,7 +226,15 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -276,7 +290,15 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -335,8 +357,15 @@
 									</div>
 								</div>
 								<br>
-								<!-- View btn -->
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -391,7 +420,15 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -447,7 +484,15 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
 							<!--/ product -->
 						</ul>
