--- a/i-shop/main.html
+++ b/i-shop/main.html
@@ -68,7 +68,7 @@
 								<a href="page-login.html">Авторизация</a>
 							</li>
 							<li>
-								<a href="#">Обратная связь</a>
+								<a href="#">Корзина</a>
 							</li>
 						</ul>
 					</nav>
@@ -161,10 +161,16 @@
 									</div>
 								</div>
 								<br>
-								<!-- View btn -->
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
-							<!--/ product -->
 							<!-- product -->
 							<li class="category-item list product">
 								<div class="picture">
@@ -217,9 +223,16 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
-							<!--/ product -->
 							<!-- product -->
 							<li class="category-item list product">
 								<div class="picture">
@@ -273,9 +286,16 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
-							<!--/ product -->
 						</ul>
 						<!-- More courses btn -->
 						<div class="more-courses-btn-container">
@@ -415,10 +435,16 @@
 									</div>
 								</div>
 								<br>
-								<!-- View btn -->
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
-							<!--/ product -->
 							<!-- product -->
 							<li class="category-item list product">
 								<div class="picture">
@@ -471,7 +497,15 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -527,7 +561,15 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<!--* Bottom line -->
+								<div class="bottom-line">
+									<!-- Add to cart -->
+									<form class="cart" method="post">
+										<button type="submit" class="cart-btn cws-button corner-radius-bottom alt orange-bg"><i class="fa fa-shopping-cart"></i> В корзину</button>
+									</form>
+									<!-- View btn -->
+									<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt view-btn">Посмотреть</a>
+								</div>
 							</li>
 							<!--/ product -->
 						</ul>
