--- a/i-shop/page-register.html
+++ b/i-shop/page-register.html
@@ -67,7 +67,7 @@
 								<a href="page-login.html">Авторизация</a>
 							</li>
 							<li>
-								<a href="#">Обратная связь</a>
+								<a href="#">Корзина</a>
 							</li>
 						</ul>
 					</nav>
