--- a/i-shop/main.html
+++ b/i-shop/main.html
@@ -299,7 +299,7 @@
 						</ul>
 						<!-- More courses btn -->
 						<div class="more-courses-btn-container">
-							<a href="#" class="bt-color-3 cws-button border-radius large">Все курсы</a>
+							<a href="courses-list.html" class="bt-color-3 cws-button border-radius large">Все курсы</a>
 						</div>
 						<br>
 					</main>
@@ -575,7 +575,7 @@
 						</ul>
 						<!-- More courses btn -->
 						<div class="more-courses-btn-container">
-							<a href="#" class="bt-color-3 cws-button border-radius large">Все курсы</a>
+							<a href="courses-list.html" class="bt-color-3 cws-button border-radius large">Все курсы</a>
 						</div>
 						<br>
 					</main>
