--- a/i-shop/courses-list.html
+++ b/i-shop/courses-list.html
@@ -67,7 +67,7 @@
 								<a href="page-login.html">Авторизация</a>
 							</li>
 							<li>
-								<a href="#">Корзина</a>
+								<a href="shop-cart.html">Корзина</a>
 							</li>
 						</ul>
 					</nav>
@@ -92,7 +92,7 @@
 			</div>
 		</div>
 	</header>
-	<!--! content -->
+	<!--! Content -->
 	<div class="page-content">
 		<div class="container clear-fix">
 			<div class="grid-col-row">
