--- a/i-shop/main.html
+++ b/i-shop/main.html
@@ -68,7 +68,7 @@
 								<a href="page-login.html">Авторизация</a>
 							</li>
 							<li>
-								<a href="#">Корзина</a>
+								<a href="shop-cart.html">Корзина</a>
 							</li>
 						</ul>
 					</nav>
