--- a/i-shop/shop-cart.html
+++ b/i-shop/shop-cart.html
@@ -22,7 +22,8 @@
 	<link href="css/select2.css" rel="stylesheet" />
 	<link href="css/custom-style.css" rel="stylesheet" />
 </head>
-<body class="courses-list boxed">
+<body class="shop courses-list boxed">
+
 	<!--! Header -->
 	<header>
 		<!-- main menu -->
@@ -67,7 +68,7 @@
 								<a href="page-login.html">Авторизация</a>
 							</li>
 							<li>
-								<a href="shop-cart.html">Корзина</a>
+								<a href="#">Корзина</a>
 							</li>
 						</ul>
 					</nav>
@@ -78,39 +79,99 @@
 				</div>
 			</div>
 		</div>
-	</header>
-	<!--! Main -->
-	<main>
-		<section class="fullwidth-background bg-2" style="background-color: #1565c0;">
+		<!-- page title -->
+		<div class="page-title">
 			<div class="grid-row">
-				<div class="login-block">
-					<div class="logo">
-						<h2>Авторизация</h2>
+				<h1>Все курсы</h1>
+				<!-- bread crumb -->
+				<nav class="bread-crumb">
+					<a href="index.html">Главная</a>
+					<i class="fa fa-long-arrow-right"></i>
+					<a href="courses-grid.html">Курсы</a>
+				</nav>
+				<!-- / bread crumb -->
+			</div>
+		</div>
+	</header>
+	<!--! Content -->
+	<div class="page-content woocommerce">
+		<div class="container clear-fix">
+			<!-- Shop -->
+			<div class="title clear-fix">
+				<h2 class="title-main">Корзина</h2>
+				<a href="courses-list.html" class="button-back">Вернуться к покупкам<i class="fa fa-angle-double-right"></i></a>
+			</div>
+			<div id="content" role="main">
+				<form action="#" method="post">
+					<table class="shop_table cart">
+						<thead>
+							<tr>
+								<th class="product-thumbnail">Курс</th>
+								<th class="product-name">&nbsp;</th>
+								<th class="product-price">Цена</th>
+								<th class="product-remove">&nbsp;</th>
+							</tr>
+						</thead>
+						<tbody>			
+							<!--* Cart item -->
+							<tr class="cart_item">
+								<!-- Thumbnail -->
+								<td class="product-thumbnail">
+									<a href="shop-single-item.html">
+										<img src="https://coursehunter.net//uploads/course_posters_/hardkornyy-kurs-o-risovanii-speceffektov-v-toon-boom.jpg" class="attachment-shop_thumbnail wp-post-image">
+									</a>					
+								</td>
+								<!-- Name -->
+								<td class="product-name">
+									<a href="shop-single-item.html">ХАРДКОРНЫЙ КУРС О РИСОВАНИИ СПЕЦЭФФЕКТОВ В TOON BOOM</a>			
+								</td>
+								<!-- Price -->
+								<td class="product-price">
+									<span class="amount">14500<sup>руб.</sup></span>		
+								</td>
+								<td class="product-remove">
+									<a href="#" class="remove" title="Remove this item"></a>	
+								</td>
+							</tr>
+							<tr>
+								<td colspan="6" class="actions">
+									<!-- Coupon -->
+									<div class="coupon">
+										<label for="coupon_code">Купон:</label> 
+										<input type="text" name="coupon_code" class="input-text corner-radius-top" id="coupon_code" value="" placeholder="Код купона">
+										<input type="submit" class="cws-button corner-radius-bottom" name="apply_coupon" value="Применить">	
+									</div>
+									<!-- Update and checkout -->
+									<input type="submit" class="orange-bg cws-button" name="update_cart" value="Обновить корзину">
+									<input type="submit" class="cws-button bt-color-3" name="proceed" value="Оплатить">	
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</form>
+				<hr class="divider-color" />
+				<div class="cart-collaterals">	
+					<!--* Total -->
+					<div class="cart_totals ">	
+						<h3>Общая стоимость</h3>
+						<table>
+							<tbody>
+								<tr class="cart-subtotal">
+									<th>Подытог:</th>
+									<td><span class="amount">1400 руб.</span></td>
+								</tr>
+								<tr class="order-total">
+									<th>Итого:</th>
+									<td><span class="amount">1699 руб.</span></td>
+								</tr>			
+							</tbody>
+						</table>
 					</div>
-					<div class="clear-both"></div>
-					<form class="login-form">
-						<div class="form-group">
-							<input type="text" class="login-input" placeholder="Ваш email">
-							<span class="input-icon">
-								<i class="fa fa-user"></i>
-							</span>
-						</div>
-						<div class="form-group">
-							<input type="text" class="login-input" placeholder="Пароль">
-							<span class="input-icon">
-								<i class="fa fa-lock"></i>
-							</span>
-						</div>
-						<p class="small">
-							<a href="#">Забыли пароль?</a>
-						</p>
-						<a href="#" class="button-fullwidth cws-button border-radius alt">Войти</a>
-						<a href="page-register.html" class="button-fullwidth cws-button orange-bg border-radius">Зарегестрироваться</a>
-					</form>
 				</div>
 			</div>
-		</section>
-	</main>
+			<!--Shop -->
+		</div>
+	</div>
 	<!--! Footer -->
 	<footer>
 		<div class="grid-row">
@@ -189,9 +250,10 @@
 			</div>
 		</div>
 	</footer>
-	<!--! Scripts -->
+	<!--! Scripts  -->
 	<script src="js/jquery.min.js"></script>
-	<script src="js/select2.js"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+	<script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/infobox/src/infobox_packed.js"></script>
 	<script type='text/javascript' src='js/jquery.validate.min.js'></script>
 	<script src="js/jquery.form.min.js"></script>
 	<script src="js/TweenMax.min.js"></script>
@@ -199,14 +261,22 @@
 	<!-- jQuery REVOLUTION Slider  -->
 	<script type="text/javascript" src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
 	<script type="text/javascript" src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.video.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.slideanims.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.actions.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.layeranimation.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.kenburn.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.navigation.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.migration.min.js"></script>
+	<script type="text/javascript" src="rs-plugin/js/extensions/revolution.extension.parallax.min.js"></script>		
 	<script src="js/jquery.isotope.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
 	<script src="js/jflickrfeed.min.js"></script>
-	<script src="js/jquery.tweet.js"></script>
 	<script src="js/jquery.fancybox.pack.js"></script>
 	<script src="js/jquery.fancybox-media.js"></script>
 	<script src="js/retina.min.js"></script>
+	<script src="js/jquery.tweet.js"></script>
 	<!-- Custom script -->
 	<script src="js/custom-scripts.js"></script>
 </body>
