--- a/i-shop/courses-list.html
+++ b/i-shop/courses-list.html
@@ -107,7 +107,7 @@
 								<button class="cws-button smaller border-radius">Поиск</button>
 							</form>
 						</div>
-						<ul class="products list-view"">
+						<ul class="products list-view">
 							<!-- product -->
 							<li class="category-item list product">
 								<!-- Picture -->
