--- a/NIINM/about.html
+++ b/NIINM/about.html
@@ -90,7 +90,7 @@
 			<div class="container">
 				<div class="row justify-content-between align-items-center">
 					<!-- Logo -->
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.png" alt="" class="logo-shape">
 						<div class="logo-text">
 							<span class="title">ООО “НИИИНМ”</span>
@@ -104,8 +104,8 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li class="current-page"><a href="#">Главная</a></li>
-				            <li><a href="about.html">Об институте</a></li>
+				        	<li><a href="index.html">Главная</a></li>
+				            <li class="current-page"><a href="#">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
 				            	<ul>
@@ -133,7 +133,7 @@
 			<div class="container">
 				<div class="row justify-content-between align-items-center">
 					<!-- Logo -->
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.png" alt="" class="logo-shape">
 						<div class="logo-text">
 							<span class="title">ООО “НИИИНМ”</span>
@@ -147,74 +147,105 @@
 				</div>
 			</div>
 		</header>
-		<!--! Start-banner -->
-		<section class="start-banner" style="background-image: url('img/start_banner1.png');">
-			<div class="container">
-				<div class="row align-items-end justify-content-sm-end justify-content-center">
-					<span class="start-banner__title">РАЗРАБОТКА, ПРОИЗВОДСТВО И ПРОДАЖА НЕТКАНЫХ МАТЕРИАЛОВ</span>
-					<div class="start-banner__white-divider"></div>
-				</div>
-			</div>
-		</section>
 		<!--! Page-title -->
-		<section class="page-title"><h1>Главная</h1></section>
+		<section class="page-title"><h1>Об институте</h1></section>
 		<!-- Container -->
 		<div class="container">
 			<!--! Card-block -->
 			<div class="card-block right">
-				<img class="card-block__img" src="img/card1.png" alt="Научно-исследовательский институт нетканых материалов">
+				<img class="card-block__img" src="img/card3.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<p>ООО «Научно-исследовательский институт нетканых материа- лов» (ООО "НИИНМ") является правопреемником Открытого Акционерного Общества "Научно-исследовательский институт нетканых материалов" и, ранее Всесоюзного научно-исследовательского институтанетканых материалов (ВНИИНТМ) основанного Минлегпромом СССР в 1963 году. Исследования и разработки ученых и специалистов института сформировали научно-техническую базу отечественной промышленности нетканых материалов. </p>
-					<p>В различные годы по разработкам института выпускалось до 70% общего объеманетканой продукции в стране.</p>
+					<strong>В состав ООО "НИИНМ" входит пять основных структурных подразделений, в том числе:</strong>
+					<ul>
+						<li>Лаборатория фильтровальных нетканых материалов;</li>
+						<li>Лаборатория нетканых материалов санитарно-гигиенического назначения;</li>
+						<li>Лаборатория стандартизации, испытаний и сертификации нетканых материалов;</li>
+						<li>Лаборатория полифункциональных нетканых материалов;</li>
+						<li>Научно-экспериментальная лаборатория;</li>
+					</ul>
 				</div>
 			</div>
+			<br>
 			<br>
 			<br>
 			<!-- Quote block -->
 			<hr>
 			<div class="quote-block">
-				<p>Сегодня главным направлением работы института является разработка и производство высокоэффективных нетканых материалов технического назначения, в том числе для фильтровальной техники.</p>
+				<h2>Сотрудники</h2>
 			</div>
 			<hr>
 			<!-- ./Quote block -->
+			<br>
 			<br>
 			<br>
 			<!--! Card-block -->
 			<div class="card-block">
-				<img class="card-block__img" src="img/card2.png" alt="Научно-исследовательский институт нетканых материалов">
+				<img class="card-block__img" src="img/employer1.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<p>Разработанные и выпускаемые ООО "НИИНМ" фильтровальные материалы успешно конкурируют с продукцией ведущих мировых производителей (в том числе DuPont, Freudenberg, Lurgi), и по некоторым параметрам превосходят их.</p>
-					<p>Имеющийся набор пилотных установок, которые позволяет варьировать технологическими операциями и получать образцы и опытные партии нетканых материалов, сложных структур, шириной 40см. При оптимальном расходе сырья 1- 5 кг.</p>
-					<p>Помимо производственных мощностей, ООО "НИИНМ" обладает достаточным научным потенциалом, способным генерироватьнаучные идеи, воплощать их в конкретные разработки для различных отраслей промышленности.Результаты научных исследований сотрудников инстита регулярно публикуются в отраслевых и специализированных изданиях.</p>
+					<h4 class="card-block__title">ШАВКИН ВЛАДИМИР ИВАНОВИЧ</h4>
+					<p>Генеральный директор</p>
+					<p>кандидат экономических наук, старший научный сотрудник, доцент, автор нескольких десятков научных публикаций</p>
+					<p>по всем вопросам работы института можно обращаться непосредственно к генеральному директору по адресу электронной почты:</p>
 				</div>
 			</div>
 			<br>
 			<br>
-			<!-- Quote block -->
 			<hr>
-			<div class="quote-block">
-				<p>ООО "НИИНМ" принимает к разработке и освоению заказы на нетканые материалы эксклюзивных структур и свойств в соответствии с требованиями заказчика.</p>
+			<!--! Employers -->
+			<div class="employers">
+				<div class="employer">
+					<img src="img/employer2.png" alt="ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА">
+					<h3 class="employer__name">ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА</h3>
+					<p>Заведующий лабораторией фильтровальных нетканых материалов кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и научных публикаций.</p>
+
+					<div class="employer-contact">
+						<span>8 (985) 300-21-37</span>
+						<span>8 (916) 362-80-28-026</span>
+						<span>8 (4967) 72-29-29</span>
+					</div>
+				</div>
+				<div class="employer">
+					<img src="img/employer3.png" alt="МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ">
+					<h3 class="employer__name">МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ</h3>
+					<p>Заведующий лабораторией стандартизации, испытаний и сертификации нетканых материалов (испытательной лабораторией) кандидат технических наук, старший научный сотрудник, эксперт, автор нескольких сотен научных публикаций.</p>
+
+					<div class="employer-contact">
+						<span>8 (4967) 35-76-75;</span>
+						<span>8(916) 218-94-04</span>
+					</div>
+				</div>
+				<div class="employer">
+					<img src="img/employer4.png" alt="ФОКИНА НИНА АЛЕКСАНДРОВНА">
+					<h3 class="employer__name">ФОКИНА НИНА АЛЕКСАНДРОВНА</h3>
+					<p>Заведующий лабораторией нетканых материалов санитарно-гигиенического назначения кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и десятков научных публикаций.</p>
+
+					<div class="employer-contact">
+						<span>8 (985) 300-21-37</span>
+						<span>8 (905) 785-79-30;</span>
+						<span>8 (4967) 72-88-8731</span>
+					</div>
+				</div>
+				<div class="employer">
+					<img src="img/employer5.png" alt="БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА">
+					<h3 class="employer__name">БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА</h3>
+					<p>Заведующий лабораторией полифункциональных нетканых материалов кандидат технических наук, ведущий научный сотрудник, автор нескольких изобретений и десятков научных публикаций разработчик линии обувных материалов "СТЕЛАН" и "ФИТОЛИН".</p>
+
+					<div class="employer-contact">
+						<span>8(985) 300-21-37</span>
+						<span>8 (916) 850-50-044</span>
+						<span>+7 (4967) 35-27-53</span>
+					</div>
+				</div>
+				<div class="employer">
+					<img src="img/employer6.png" alt="БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ">
+					<h3 class="employer__name">БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ</h3>
+					<p>заведующий научно-экспериментальной лабораторией.</p>
+
+					<div class="employer-contact">
+						<span>8 (4967) 72-88-87</span>
+					</div>
+				</div>
 			</div>
-			<hr>
-			<!-- ./Quote block -->
-			<br>
-			<br>
-			<!--! Columns -->
-			<section class="row columns-section justify-content-between">
-				<div class="col-lg-5 col-md-6 col-12">
-					<h3>Основные направления деятельности института:</h3>
-					<br>
-					<p>Разработка и освоение новых видов технологических процессов изготовления нетканых материалов из различных видов волокнистого и не волокнистого сырья.</p>
-					<p>Разработка новых видов оригинальных структур нетканых материалов различного назначения в соответствии с требованиями потребителя.</p>
-					<p>Осуществление инжиниринговых работ по организации производства нетканых материалов.</p>
-					<p>Осуществление работ по стандартизации, испытанию и сертификации продукции для предприятий производителей нетканых материалов.</p>
-				</div>
-				<div class="col-lg-5 col-md-6 col-12">
-					<p>Сотрудниками института создано более 200 патентов на изобретения, полезную модель, и свидетельств на товарные знаки. За последние годы разработки института награждены медалями, в том числе золотыми и серебряными, дипломами Всемирного салона изобретений, научных исследований и промышленных инноваций «Брюссель-Эврика», международных выставок и салонов инноваций и инвестиций.</p>
-					<p>Результаты НИР института представлены на международных конгрессах, в том числе ЭДАНА (Брюссель, Женева), ИНДЕКС (Прага), ЭЛТЕКС (Польша), АКВАТЕРРА (Санкт-Петербург), Вейст-Тек (Москва). Два сотрудника института являются лауреатами премии Правительства РФ в области науки и техники.</p>
-				</div>
-			</section>
-			<br><br>
 		</div>
 		<!--! News -->
 		<section class="news">
@@ -299,7 +330,7 @@
 							<div class="footer-column">
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-menu__links">
-									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
+									<li><a href="#">ОБ ИНСТИТУТЕ</a></li>
 									<li><a href="#">АССОЦИАЦИЯ</a></li>
 									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="#">КОНТАКТЫ</a></li>
