--- a/NIINM/about.html
+++ b/NIINM/about.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ООО “НИИИНМ”</title>
+	<title>Об институте | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -118,7 +118,7 @@
 				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
-				            <li><a href="#">Ассоциация</a></li>
+				            <li><a href="association.html">Ассоциация</a></li>
 				            <li><a href="#">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
@@ -331,7 +331,7 @@
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-menu__links">
 									<li><a href="#">ОБ ИНСТИТУТЕ</a></li>
-									<li><a href="#">АССОЦИАЦИЯ</a></li>
+									<li><a href="association.html">АССОЦИАЦИЯ</a></li>
 									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="#">КОНТАКТЫ</a></li>
 								</ul>
