--- a/NIINM/association.html
+++ b/NIINM/association.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ООО “НИИИНМ”</title>
+	<title>Ассоциация | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li class="current-page"><a href="#">Главная</a></li>
+				        	<li><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -118,7 +118,7 @@
 				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
-				            <li><a href="association.html">Ассоциация</a></li>
+				            <li class="current-page"><a href="#">Ассоциация</a></li>
 				            <li><a href="#">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
@@ -148,72 +148,42 @@
 			</div>
 		</header>
 		<!--! Start-banner -->
-		<section class="start-banner" style="background-image: url('img/start_banner1.png');">
+		<section class="start-banner" style="background-image: url('img/start_banner2.png');">
 			<div class="container">
 				<div class="row align-items-end justify-content-sm-end justify-content-center">
-					<span class="start-banner__title">РАЗРАБОТКА, ПРОИЗВОДСТВО И ПРОДАЖА НЕТКАНЫХ МАТЕРИАЛОВ</span>
+					<span class="start-banner__title">АССОЦИАЦИЯ ПРОИЗВОДИТЕЛЕЙ НЕТКАНЫХ МАТЕРИАЛОВ</span>
 					<div class="start-banner__white-divider"></div>
 				</div>
 			</div>
 		</section>
 		<!--! Page-title -->
-		<section class="page-title"><h1>Главная</h1></section>
+		<section class="page-title"><h1>АССОЦИАЦИЯ</h1></section>
 		<!-- Container -->
 		<div class="container">
+			<!-- Quote block -->
+			<hr>
+			<div class="quote-block">
+				<p>Институт являлся одним из инициаторов создания в 2007 году Ассоциации производителей нетканых материалов (АСИНЕМ), являющейся некоммерческим объединением российских производителей нетканых материалов.</p>
+			</div>
+			<hr>
+			<!-- ./Quote block -->
+			<br>
+			<br>
 			<!--! Card-block -->
 			<div class="card-block right">
-				<img class="card-block__img" src="img/card1.png" alt="Научно-исследовательский институт нетканых материалов">
+				<img class="card-block__img" src="img/card4.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<p>ООО «Научно-исследовательский институт нетканых материа- лов» (ООО "НИИНМ") является правопреемником Открытого Акционерного Общества "Научно-исследовательский институт нетканых материалов" и, ранее Всесоюзного научно-исследовательского институтанетканых материалов (ВНИИНТМ) основанного Минлегпромом СССР в 1963 году. Исследования и разработки ученых и специалистов института сформировали научно-техническую базу отечественной промышленности нетканых материалов. </p>
-					<p>В различные годы по разработкам института выпускалось до 70% общего объеманетканой продукции в стране.</p>
+					<strong>Основными целями деятельности АСИНЕМ являются:</strong>
+					<ul>
+						<li>Обеспечение защиты прав членов ассоциации и представления их общих интересов в государственных и иных органах, международных организациях.</li>
+						<li>Повышение эффективности и прибыльности производства, улучшение качества нетканых материалов, удовлетворение потребностей внутреннего рынка.</li>
+						<li>Выход на внешний рынок на основе координации и создания благоприятных условий хозяйственной деятельности ее членов.</li>
+						<li>Оказание на коммерческой основе научно-исследовательских, управленческих и других услуг.</li>
+					</ul>
 				</div>
 			</div>
-			<br>
-			<br>
-			<!-- Quote block -->
-			<hr>
-			<div class="quote-block">
-				<p>Сегодня главным направлением работы института является разработка и производство высокоэффективных нетканых материалов технического назначения, в том числе для фильтровальной техники.</p>
-			</div>
-			<hr>
-			<!-- ./Quote block -->
-			<br>
-			<br>
-			<!--! Card-block -->
-			<div class="card-block">
-				<img class="card-block__img" src="img/card2.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<p>Разработанные и выпускаемые ООО "НИИНМ" фильтровальные материалы успешно конкурируют с продукцией ведущих мировых производителей (в том числе DuPont, Freudenberg, Lurgi), и по некоторым параметрам превосходят их.</p>
-					<p>Имеющийся набор пилотных установок, которые позволяет варьировать технологическими операциями и получать образцы и опытные партии нетканых материалов, сложных структур, шириной 40см. При оптимальном расходе сырья 1- 5 кг.</p>
-					<p>Помимо производственных мощностей, ООО "НИИНМ" обладает достаточным научным потенциалом, способным генерироватьнаучные идеи, воплощать их в конкретные разработки для различных отраслей промышленности.Результаты научных исследований сотрудников инстита регулярно публикуются в отраслевых и специализированных изданиях.</p>
-				</div>
-			</div>
-			<br>
-			<br>
-			<!-- Quote block -->
-			<hr>
-			<div class="quote-block">
-				<p>ООО "НИИНМ" принимает к разработке и освоению заказы на нетканые материалы эксклюзивных структур и свойств в соответствии с требованиями заказчика.</p>
-			</div>
-			<hr>
-			<!-- ./Quote block -->
-			<br>
-			<br>
-			<!--! Columns -->
-			<section class="row columns-section justify-content-between">
-				<div class="col-lg-5 col-md-6 col-12">
-					<h3>Основные направления деятельности института:</h3>
-					<br>
-					<p>Разработка и освоение новых видов технологических процессов изготовления нетканых материалов из различных видов волокнистого и не волокнистого сырья.</p>
-					<p>Разработка новых видов оригинальных структур нетканых материалов различного назначения в соответствии с требованиями потребителя.</p>
-					<p>Осуществление инжиниринговых работ по организации производства нетканых материалов.</p>
-					<p>Осуществление работ по стандартизации, испытанию и сертификации продукции для предприятий производителей нетканых материалов.</p>
-				</div>
-				<div class="col-lg-5 col-md-6 col-12">
-					<p>Сотрудниками института создано более 200 патентов на изобретения, полезную модель, и свидетельств на товарные знаки. За последние годы разработки института награждены медалями, в том числе золотыми и серебряными, дипломами Всемирного салона изобретений, научных исследований и промышленных инноваций «Брюссель-Эврика», международных выставок и салонов инноваций и инвестиций.</p>
-					<p>Результаты НИР института представлены на международных конгрессах, в том числе ЭДАНА (Брюссель, Женева), ИНДЕКС (Прага), ЭЛТЕКС (Польша), АКВАТЕРРА (Санкт-Петербург), Вейст-Тек (Москва). Два сотрудника института являются лауреатами премии Правительства РФ в области науки и техники.</p>
-				</div>
-			</section>
+			<br><br>
+			<strong>Более подробно о деятельности АСИНЕМ можно узнать на сайте в сети Интернет по адресу: <a href="http://www.asinem.ru">http://www.asinem.ru</a>.</strong>
 			<br><br>
 		</div>
 		<!--! News -->
@@ -300,7 +270,7 @@
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-menu__links">
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
-									<li><a href="association.html">АССОЦИАЦИЯ</a></li>
+									<li><a href="#">АССОЦИАЦИЯ</a></li>
 									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="#">КОНТАКТЫ</a></li>
 								</ul>
