--- a/NIINM/asinem.html
+++ b/NIINM/asinem.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Об институте | ООО “НИИИНМ”</title>
+	<title>Ассоциация | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -105,7 +105,7 @@
 					<nav id="my-menu">
 				        <ul>
 				        	<li><a href="index.html">Главная</a></li>
-				            <li class="current-page"><a href="#">Об институте</a></li>
+				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
 				            	<ul>
@@ -118,7 +118,7 @@
 				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
-				            <li><a href="asinem.html">Ассоциация</a></li>
+				            <li class="current-page"><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="#">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
@@ -147,105 +147,44 @@
 				</div>
 			</div>
 		</header>
-		<!--! Page-title -->
-		<section class="page-title"><h1>Об институте</h1></section>
-		<!-- Container -->
-		<div class="container">
-			<!--! Card-block -->
-			<div class="card-block right">
-				<img class="card-block__img" src="img/card3.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<strong>В состав ООО "НИИНМ" входит пять основных структурных подразделений, в том числе:</strong>
-					<ul>
-						<li>Лаборатория фильтровальных нетканых материалов;</li>
-						<li>Лаборатория нетканых материалов санитарно-гигиенического назначения;</li>
-						<li>Лаборатория стандартизации, испытаний и сертификации нетканых материалов;</li>
-						<li>Лаборатория полифункциональных нетканых материалов;</li>
-						<li>Научно-экспериментальная лаборатория;</li>
-					</ul>
+		<!--! Start-banner -->
+		<section class="start-banner" style="background-image: url('img/start_banner2.png');">
+			<div class="container">
+				<div class="row align-items-end justify-content-sm-end justify-content-center">
+					<span class="start-banner__title">АССОЦИАЦИЯ ПРОИЗВОДИТЕЛЕЙ НЕТКАНЫХ МАТЕРИАЛОВ</span>
+					<div class="start-banner__white-divider"></div>
 				</div>
 			</div>
-			<br>
-			<br>
-			<br>
+		</section>
+		<!--! Page-title -->
+		<section class="page-title"><h1>АССОЦИАЦИЯ</h1></section>
+		<!-- Container -->
+		<div class="container">
 			<!-- Quote block -->
 			<hr>
 			<div class="quote-block">
-				<h2>Сотрудники</h2>
+				<p>Институт являлся одним из инициаторов создания в 2007 году Ассоциации производителей нетканых материалов (АСИНЕМ), являющейся некоммерческим объединением российских производителей нетканых материалов.</p>
 			</div>
 			<hr>
 			<!-- ./Quote block -->
 			<br>
 			<br>
-			<br>
 			<!--! Card-block -->
-			<div class="card-block">
-				<img class="card-block__img" src="img/employer1.png" alt="Научно-исследовательский институт нетканых материалов">
+			<div class="card-block right">
+				<img class="card-block__img" src="img/card4.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<h4 class="card-block__title">ШАВКИН ВЛАДИМИР ИВАНОВИЧ</h4>
-					<p>Генеральный директор</p>
-					<p>кандидат экономических наук, старший научный сотрудник, доцент, автор нескольких десятков научных публикаций</p>
-					<p>по всем вопросам работы института можно обращаться непосредственно к генеральному директору по адресу электронной почты:</p>
+					<strong>Основными целями деятельности АСИНЕМ являются:</strong>
+					<ul>
+						<li>Обеспечение защиты прав членов ассоциации и представления их общих интересов в государственных и иных органах, международных организациях.</li>
+						<li>Повышение эффективности и прибыльности производства, улучшение качества нетканых материалов, удовлетворение потребностей внутреннего рынка.</li>
+						<li>Выход на внешний рынок на основе координации и создания благоприятных условий хозяйственной деятельности ее членов.</li>
+						<li>Оказание на коммерческой основе научно-исследовательских, управленческих и других услуг.</li>
+					</ul>
 				</div>
 			</div>
-			<br>
-			<br>
-			<hr>
-			<!--! Employers -->
-			<div class="employers">
-				<div class="employer">
-					<img src="img/employer2.png" alt="ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА">
-					<h3 class="employer__name">ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА</h3>
-					<p>Заведующий лабораторией фильтровальных нетканых материалов кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (985) 300-21-37</span>
-						<span>8 (916) 362-80-28-026</span>
-						<span>8 (4967) 72-29-29</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer3.png" alt="МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ">
-					<h3 class="employer__name">МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ</h3>
-					<p>Заведующий лабораторией стандартизации, испытаний и сертификации нетканых материалов (испытательной лабораторией) кандидат технических наук, старший научный сотрудник, эксперт, автор нескольких сотен научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (4967) 35-76-75;</span>
-						<span>8(916) 218-94-04</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer4.png" alt="ФОКИНА НИНА АЛЕКСАНДРОВНА">
-					<h3 class="employer__name">ФОКИНА НИНА АЛЕКСАНДРОВНА</h3>
-					<p>Заведующий лабораторией нетканых материалов санитарно-гигиенического назначения кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и десятков научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (985) 300-21-37</span>
-						<span>8 (905) 785-79-30;</span>
-						<span>8 (4967) 72-88-8731</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer5.png" alt="БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА">
-					<h3 class="employer__name">БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА</h3>
-					<p>Заведующий лабораторией полифункциональных нетканых материалов кандидат технических наук, ведущий научный сотрудник, автор нескольких изобретений и десятков научных публикаций разработчик линии обувных материалов "СТЕЛАН" и "ФИТОЛИН".</p>
-
-					<div class="employer-contact">
-						<span>8(985) 300-21-37</span>
-						<span>8 (916) 850-50-044</span>
-						<span>+7 (4967) 35-27-53</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer6.png" alt="БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ">
-					<h3 class="employer__name">БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ</h3>
-					<p>заведующий научно-экспериментальной лабораторией.</p>
-
-					<div class="employer-contact">
-						<span>8 (4967) 72-88-87</span>
-					</div>
-				</div>
-			</div>
+			<br><br>
+			<strong>Более подробно о деятельности АСИНЕМ можно узнать на сайте в сети Интернет по адресу: <a href="http://www.asinem.ru">http://www.asinem.ru</a>.</strong>
+			<br><br>
 		</div>
 		<!--! News -->
 		<section class="news">
@@ -298,7 +237,7 @@
 				<div class="row justify-content-between flex-column flex-lg-row align-items-center">
 					<div class="col-lg-4 col-12">
 						<!-- Logo -->
-						<a href="#" class="logo">
+						<a href="index.html" class="logo">
 							<img src="img/logo.png" alt="" class="logo-shape">
 							<div class="logo-text">
 								<span class="title">ООО “НИИИНМ”</span>
