--- a/NIINM/index.html
+++ b/NIINM/index.html
@@ -118,7 +118,7 @@
 				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
-				            <li><a href="association.html">Ассоциация</a></li>
+				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="#">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
@@ -300,7 +300,7 @@
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-menu__links">
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
-									<li><a href="association.html">АССОЦИАЦИЯ</a></li>
+									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
 									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="#">КОНТАКТЫ</a></li>
 								</ul>
