--- a/NIINM/index.html
+++ b/NIINM/index.html
@@ -122,7 +122,7 @@
 				            <li><a href="#">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
-				            <li><a href="#">Лаборатория</a></li>
+				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
 				    </nav>
 				</div>
@@ -309,7 +309,7 @@
 								<h5 class="footer-column__title">УСЛУГИ</h5>
 								<ul class="footer-menu__links">
 									<li><a href="#">ДЕКОРАТИВНОЕ  ПАННО</a></li>
-									<li><a href="#">ИСПЫТАТЕЛЬНАЯ ЛАБОРАТОРИЯ </a></li>
+									<li><a href="lab.html">ИСПЫТАТЕЛЬНАЯ ЛАБОРАТОРИЯ </a></li>
 									<li><a href="#">УСЛУГИ</a></li>
 								</ul>
 							</div>
