--- a/NIINM/lab.html
+++ b/NIINM/lab.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Ассоциация | ООО “НИИИНМ”</title>
+	<title>Лаборатория | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li><a href="index.html">Главная</a></li>
+				        	<li><a href="#">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -118,11 +118,11 @@
 				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
-				            <li class="current-page"><a href="#">Ассоциация</a></li>
+				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="#">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
-				            <li><a href="#">Лаборатория</a></li>
+				            <li class="current-page"><a href="lab.html">Лаборатория</a></li>
 				        </ul>
 				    </nav>
 				</div>
@@ -148,42 +148,57 @@
 			</div>
 		</header>
 		<!--! Start-banner -->
-		<section class="start-banner" style="background-image: url('img/start_banner2.png');">
+		<section class="start-banner" style="background-image: url('img/start_banner3.png');">
 			<div class="container">
 				<div class="row align-items-end justify-content-sm-end justify-content-center">
-					<span class="start-banner__title">АССОЦИАЦИЯ ПРОИЗВОДИТЕЛЕЙ НЕТКАНЫХ МАТЕРИАЛОВ</span>
 					<div class="start-banner__white-divider"></div>
 				</div>
 			</div>
 		</section>
 		<!--! Page-title -->
-		<section class="page-title"><h1>АССОЦИАЦИЯ</h1></section>
+		<section class="page-title"><h1>ИСПЫТАТЕЛЬНАЯ ЛАБОРОТОРИЯ</h1></section>
 		<!-- Container -->
 		<div class="container">
+			<p>В структуре института имеется испытательная лаборатория. Лаборатория проводит испытания в т.ч. по добровольной сертификации различных характеристик, физико-механических, физико-химических и эксплуатационных свойств нетканых материалов, тканей, волокон и химических. Входящая в состав ООО "НИИНМ" испытательная лаборатория на протяжении многих десятилетий работает под руководством широко известного среди специалистов в области нетканых материалов ученого кандидата технических наук, старшего научного сотрудника, эксперта Мухамеджанова Габита Кульджабаевича.</p>
+			<br>
+			<br>
+			<br>
 			<!-- Quote block -->
 			<hr>
 			<div class="quote-block">
-				<p>Институт являлся одним из инициаторов создания в 2007 году Ассоциации производителей нетканых материалов (АСИНЕМ), являющейся некоммерческим объединением российских производителей нетканых материалов.</p>
+				<p>По всем вопросам работы испытательной лаборатории можно связаться по телефону: <br>8 (4967) 35-76-75 <br> 8 (916) 218-97-04</p>
+			</div>
+			<!-- ./Quote block -->
+			<!-- Quote block -->
+			<hr>
+			<div class="quote-block">
+				<p>Испытательная лаборатория проводит испытания текстильного сырья и текстильных материалов: тканей и нетканых полотен по структурным характеристикам, физико-механических, физико-химических и эксплуатационным свойствам, в т ч. сертификационные по добровольной системе. Комплексная оценка качества нетканых полотен должно осуществляться по следующим характеристикам для:</p>
 			</div>
 			<hr>
 			<!-- ./Quote block -->
 			<br>
 			<br>
-			<!--! Card-block -->
-			<div class="card-block right">
-				<img class="card-block__img" src="img/card4.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<strong>Основными целями деятельности АСИНЕМ являются:</strong>
-					<ul>
-						<li>Обеспечение защиты прав членов ассоциации и представления их общих интересов в государственных и иных органах, международных организациях.</li>
-						<li>Повышение эффективности и прибыльности производства, улучшение качества нетканых материалов, удовлетворение потребностей внутреннего рынка.</li>
-						<li>Выход на внешний рынок на основе координации и создания благоприятных условий хозяйственной деятельности ее членов.</li>
-						<li>Оказание на коммерческой основе научно-исследовательских, управленческих и других услуг.</li>
-					</ul>
+			<!--! Columns -->
+			<section class="row columns-section justify-content-between">
+				<div class="col-lg-5 col-md-6 col-12">
+					<h3>Комплексная оценка качества полотен:</h3>
+					<br>
+					<p>Новых типов утеплителей и наполнителей, теплоизоляционных материалов для одежды, головных уборов, перо-пуховых изделий, мебели и стройиндустрии: миграцию волокон, тепловое и электрическое сопротивление, дефомационные характеристики при различных воздействиях, устойчивость к многократному сжатию, формоустойчивость, размеры пор и пористость, устойчивость к многократной замочке, стирке и химчистке и др. воздействиям.</p>
+					<p>Агро-текстильных, геосинтетических материалов: водопроницаемость, коэффициент фильтрации, фильтрующую способность, прочность при продавливании шариком, устойчивость к УФ-облучению, размеры пор (отверстий) в соответствии с требованиями заказчика.</p>
+					<p>Фильтрующих материалов для газов, аэрозолей и жидкостей: аэродинамичекое и электрическое сопротивление, коэффициент проскока пыли, задерживающую и сорбционную способности, пылеемкость, размеры пор, фракционный состав, тонкость и скорость фильтрации, эффективность очистки.</p>
+					<p>Химических и вторичных волокон, включая: термофизические и структурные характеристики, содержание замасливателя.</p>
 				</div>
-			</div>
-			<br><br>
-			<strong>Более подробно о деятельности АСИНЕМ можно узнать на сайте в сети Интернет по адресу: <a href="http://www.asinem.ru">http://www.asinem.ru</a>.</strong>
+				<div class="col-lg-5 col-md-6 col-12">
+					<h3>Комплексная оценка качества полотен:</h3>
+					<br>
+					<p>Проводит разработку и экспертизу технических условий (ТУ) и стандартов предприятий (СТО, СТП) на нетканые полотна различных структур и назначений; Оказывает консультации по техническому регулированию, стандартизации и сертификации текстильной продукции;</p>
+					<p>Выполняет исследования специфических характеристик и свойств нетканых полотен по заявкам с целью расширения областей применения с последующей совместной публикацией результатов;</p>
+					<p>Проводит разработку технических требований и нормы показателей на нетканые полотна определенного назначения. Выдаёт экспертное заключение о причинах разрушения рукавных фильтров и оценку срока службы рукавных фильтров после регенерации;</p>
+					<p>Проводит подготовку обзоров по отдельным проблемам нетканых материалов (агро-текстилю, геосинтетики и др.) и даёт рекомендации по применению и выбору отечественных аналогов взамен импортных;</p>
+					<p>Испытательная лаборатория сотрудничает с отечественными предприятиями и организациями, начиная от Владивостока до Калининграда, а также с предприятиями Белоруссии и Казахстана. Сотрудниками лаборатории опубликовано более 200 статей, 4 монографии и разработано более 40 государственных, национальных стандартов и методических указаний;</p>
+					<p>А также даем рекомендации по измерительным приборам и испытательному оборудованию текстильных материалов.</p>
+				</div>
+			</section>
 			<br><br>
 		</div>
 		<!--! News -->
@@ -270,7 +285,7 @@
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-menu__links">
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
-									<li><a href="#">АССОЦИАЦИЯ</a></li>
+									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
 									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="#">КОНТАКТЫ</a></li>
 								</ul>
@@ -279,7 +294,7 @@
 								<h5 class="footer-column__title">УСЛУГИ</h5>
 								<ul class="footer-menu__links">
 									<li><a href="#">ДЕКОРАТИВНОЕ  ПАННО</a></li>
-									<li><a href="#">ИСПЫТАТЕЛЬНАЯ ЛАБОРАТОРИЯ </a></li>
+									<li><a href="lab.html">ИСПЫТАТЕЛЬНАЯ ЛАБОРАТОРИЯ </a></li>
 									<li><a href="#">УСЛУГИ</a></li>
 								</ul>
 							</div>
