--- a/NIINM/asinem.html
+++ b/NIINM/asinem.html
@@ -173,7 +173,7 @@
 			<div class="card-block right">
 				<img class="card-block__img" src="img/card4.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<strong>Основными целями деятельности АСИНЕМ являются:</strong>
+					<span class="strong-text">Основными целями деятельности АСИНЕМ являются:</span>
 					<ul>
 						<li>Обеспечение защиты прав членов ассоциации и представления их общих интересов в государственных и иных органах, международных организациях.</li>
 						<li>Повышение эффективности и прибыльности производства, улучшение качества нетканых материалов, удовлетворение потребностей внутреннего рынка.</li>
@@ -183,7 +183,7 @@
 				</div>
 			</div>
 			<br><br>
-			<strong>Более подробно о деятельности АСИНЕМ можно узнать на сайте в сети Интернет по адресу: <a href="http://www.asinem.ru">http://www.asinem.ru</a>.</strong>
+			<span class="strong-text">Более подробно о деятельности АСИНЕМ можно узнать на сайте в сети Интернет по адресу: <a href="http://www.asinem.ru">http://www.asinem.ru</a>.</span>
 			<br><br>
 		</div>
 		<!--! News -->
