--- a/NIINM/services.html
+++ b/NIINM/services.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ООО “НИИИНМ”</title>
+	<title>Услуги | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li class="current-page"><a href="#">Главная</a></li>
+				        	<li><a href="#">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -120,7 +120,7 @@
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="nir.html">Последние Разработки</a></li>
-				            <li><a href="services.html">Услуги</a></li>
+				            <li class="current-page"><a href="services.html">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
@@ -148,73 +148,35 @@
 			</div>
 		</header>
 		<!--! Start-banner -->
-		<section class="start-banner" style="background-image: url('img/start_banner1.png');">
+		<section class="start-banner" style="background-image: url('img/start_banner4.png');">
 			<div class="container">
 				<div class="row align-items-end justify-content-sm-end justify-content-center">
-					<span class="start-banner__title">РАЗРАБОТКА, ПРОИЗВОДСТВО И ПРОДАЖА НЕТКАНЫХ МАТЕРИАЛОВ</span>
+					<span class="start-banner__title">ПОШИВ ФИЛЬТРОВАЛЬНЫХ РУКАВОВ, ТЕХНИЧЕСКИХ САЛФЕТОК И ДРУГИХ ИЗДЕЛИИ</span>
 					<div class="start-banner__white-divider"></div>
 				</div>
 			</div>
 		</section>
 		<!--! Page-title -->
-		<section class="page-title"><h1>Главная</h1></section>
+		<section class="page-title"><h1>УСЛУГИ</h1></section>
 		<!-- Container -->
 		<div class="container">
-			<!--! Card-block -->
-			<div class="card-block right">
-				<img class="card-block__img" src="img/card1.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<p>ООО «Научно-исследовательский институт нетканых материа- лов» (ООО "НИИНМ") является правопреемником Открытого Акционерного Общества "Научно-исследовательский институт нетканых материалов" и, ранее Всесоюзного научно-исследовательского институтанетканых материалов (ВНИИНТМ) основанного Минлегпромом СССР в 1963 году. Исследования и разработки ученых и специалистов института сформировали научно-техническую базу отечественной промышленности нетканых материалов. </p>
-					<p>В различные годы по разработкам института выпускалось до 70% общего объеманетканой продукции в стране.</p>
-				</div>
-			</div>
+			<hr>
 			<br>
 			<br>
+			<p style="text-align: center;">ООО «НИИНМ» на основе разработанных институтом и выпускаемых на его производственных площадках фильтровальных полотен, имеет возможность по чертежам заказчика изготовить фильтр-элементы различных конструкций и конфигураций.</p>
+			<p style="text-align: center;">Рукав фильтровальный, как один из элементов фильтрующего оборудования, используется для очистки больших объёмов воздуха и газов со значительной концентрацией пыли. Фильтрующими элементами в таких отраслях являются рукава из специального нетканого полотна, что позволяет увеличить срок службы фильтров из-за способности полотна к многократной регенераций.</p>
+			<p style="text-align: center;">Наши рукавные фильтры широко применяются на предприятиях черной и цветной металлургии, химической промышленности, в строительных материалах, асфальто-бетонных и цементных заводах, деревообрабатывающей промышленности, пищевой промышленности, в энергетических установках и др.</p>
+			<p style="text-align: center;">Мы творчески сотрудничаем с многими производителями фильтровального оборудования и готовы помочь при выборе фильтра, каркаса к нему и организуем пошив фильтровальных рукавов по требуемым размерам.</p>
+			<p style="text-align: center;">Для подбора рукавных фильтров, технических салфеток и др. изделий (маты, боны и другие материалы к ним), Вы можете обратится к нашим специалистам. Мы будем рады чертежам и фотографиям, образцам фильтровального материала и другим подробным описаниям необходимого изделия.</p>
 			<!-- Quote block -->
-			<hr>
 			<div class="quote-block">
-				<p>Сегодня главным направлением работы института является разработка и производство высокоэффективных нетканых материалов технического назначения, в том числе для фильтровальной техники.</p>
+				<h2>КОНТАКТЫ</h2>
+				<br>
+				<strong>8 (985) 300-21-37</strong>
+				<br>
+				<strong>8 (4967) 76-52-40</strong>
 			</div>
-			<hr>
 			<!-- ./Quote block -->
-			<br>
-			<br>
-			<!--! Card-block -->
-			<div class="card-block">
-				<img class="card-block__img" src="img/card2.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<p>Разработанные и выпускаемые ООО "НИИНМ" фильтровальные материалы успешно конкурируют с продукцией ведущих мировых производителей (в том числе DuPont, Freudenberg, Lurgi), и по некоторым параметрам превосходят их.</p>
-					<p>Имеющийся набор пилотных установок, которые позволяет варьировать технологическими операциями и получать образцы и опытные партии нетканых материалов, сложных структур, шириной 40см. При оптимальном расходе сырья 1- 5 кг.</p>
-					<p>Помимо производственных мощностей, ООО "НИИНМ" обладает достаточным научным потенциалом, способным генерироватьнаучные идеи, воплощать их в конкретные разработки для различных отраслей промышленности.Результаты научных исследований сотрудников инстита регулярно публикуются в отраслевых и специализированных изданиях.</p>
-				</div>
-			</div>
-			<br>
-			<br>
-			<!-- Quote block -->
-			<hr>
-			<div class="quote-block">
-				<p>ООО "НИИНМ" принимает к разработке и освоению заказы на нетканые материалы эксклюзивных структур и свойств в соответствии с требованиями заказчика.</p>
-			</div>
-			<hr>
-			<!-- ./Quote block -->
-			<br>
-			<br>
-			<!--! Columns -->
-			<section class="row columns-section justify-content-between">
-				<div class="col-lg-5 col-md-6 col-12">
-					<h3>Основные направления деятельности института:</h3>
-					<br>
-					<p>Разработка и освоение новых видов технологических процессов изготовления нетканых материалов из различных видов волокнистого и не волокнистого сырья.</p>
-					<p>Разработка новых видов оригинальных структур нетканых материалов различного назначения в соответствии с требованиями потребителя.</p>
-					<p>Осуществление инжиниринговых работ по организации производства нетканых материалов.</p>
-					<p>Осуществление работ по стандартизации, испытанию и сертификации продукции для предприятий производителей нетканых материалов.</p>
-				</div>
-				<div class="col-lg-5 col-md-6 col-12">
-					<p>Сотрудниками института создано более 200 патентов на изобретения, полезную модель, и свидетельств на товарные знаки. За последние годы разработки института награждены медалями, в том числе золотыми и серебряными, дипломами Всемирного салона изобретений, научных исследований и промышленных инноваций «Брюссель-Эврика», международных выставок и салонов инноваций и инвестиций.</p>
-					<p>Результаты НИР института представлены на международных конгрессах, в том числе ЭДАНА (Брюссель, Женева), ИНДЕКС (Прага), ЭЛТЕКС (Польша), АКВАТЕРРА (Санкт-Петербург), Вейст-Тек (Москва). Два сотрудника института являются лауреатами премии Правительства РФ в области науки и техники.</p>
-				</div>
-			</section>
-			<br><br>
 		</div>
 		<!--! News -->
 		<section class="news">
