--- a/NIINM/about.html
+++ b/NIINM/about.html
@@ -120,7 +120,7 @@
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="nir.html">Последние Разработки</a></li>
-				            <li><a href="#">Услуги</a></li>
+				            <li><a href="services.html">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
@@ -286,7 +286,7 @@
 					<a href="#" class="pagination-item" style="background-image: url(img/pagination_1.png);">
 						<h4 class="pagination-item__title">МАТЕРИАЛЫ</h4>
 					</a>
-					<a href="#" class="pagination-item" style="background-image: url(img/pagination_2.png);">
+					<a href="services.html" class="pagination-item" style="background-image: url(img/pagination_2.png);">
 						<h4 class="pagination-item__title">УСЛУГИ</h4>
 					</a>
 				</div>
@@ -341,7 +341,7 @@
 								<ul class="footer-menu__links">
 									<li><a href="#">ДЕКОРАТИВНОЕ  ПАННО</a></li>
 									<li><a href="lab.html">ИСПЫТАТЕЛЬНАЯ ЛАБОРАТОРИЯ </a></li>
-									<li><a href="#">УСЛУГИ</a></li>
+									<li><a href="services.html">УСЛУГИ</a></li>
 								</ul>
 							</div>
 						</nav>
