--- a/NIINM/nir.html
+++ b/NIINM/nir.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ООО “НИИИНМ”</title>
+	<title>ПОСЛЕДНИЕ РАЗРАБОТКИ | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -120,7 +120,7 @@
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li class="current-page"><a href="nir.html">Последние Разработки</a></li>
-				            <li><a href="#">Услуги</a></li>
+				            <li><a href="services.html">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
@@ -215,7 +215,7 @@
 					<a href="#" class="pagination-item" style="background-image: url(img/pagination_1.png);">
 						<h4 class="pagination-item__title">МАТЕРИАЛЫ</h4>
 					</a>
-					<a href="#" class="pagination-item" style="background-image: url(img/pagination_2.png);">
+					<a href="services.html" class="pagination-item" style="background-image: url(img/pagination_2.png);">
 						<h4 class="pagination-item__title">УСЛУГИ</h4>
 					</a>
 				</div>
@@ -270,7 +270,7 @@
 								<ul class="footer-menu__links">
 									<li><a href="#">ДЕКОРАТИВНОЕ  ПАННО</a></li>
 									<li><a href="lab.html">ИСПЫТАТЕЛЬНАЯ ЛАБОРАТОРИЯ </a></li>
-									<li><a href="#">УСЛУГИ</a></li>
+									<li><a href="services.html">УСЛУГИ</a></li>
 								</ul>
 							</div>
 						</nav>
